--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
           </div>
 
           <div class="col-md-4 side-bar" id="sidebar">
-            <img class="img-square featured" src="http://placehold.it/300x300" alt="Generic placeholder image" width="300px"
+            <img class="img-square featured" src="http://placehold.it/300x300" alt="Generic placeholder image" width="100%"
               height="700px">
           </div>
 
